--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "strapi-project",
+  "name": "strapi",
   "private": true,
   "version": "0.1.0",
   "description": "A Strapi application",
@@ -9,22 +9,21 @@
     "build": "strapi build",
     "strapi": "strapi"
   },
+  "devDependencies": {},
   "dependencies": {
-    "@strapi/strapi": "4.3.3",
-    "@strapi/plugin-users-permissions": "4.3.3",
-    "@strapi/plugin-i18n": "4.3.3",
-    "@strapi/provider-upload-aws-s3": "^4.1.12",
-    "better-sqlite3": "7.4.6",
-    "pg": "^8.7.3"
+    "@strapi/strapi": "4.3.8",
+    "@strapi/plugin-users-permissions": "4.3.8",
+    "@strapi/plugin-i18n": "4.3.8",
+    "better-sqlite3": "7.4.6"
   },
   "author": {
     "name": "A Strapi developer"
   },
   "strapi": {
-    "uuid": "7548e998-2a51-430e-a614-b86de5879550"
+    "uuid": "50bfaa99-f42c-4b78-9c89-47689d128fac"
   },
   "engines": {
-    "node": ">=12.x.x <=16.x.x",
+    "node": ">=14.19.1 <=16.x.x",
     "npm": ">=6.0.0"
   },
   "license": "MIT"
