--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "build": "strapi build",
     "strapi": "strapi"
   },
-  "devDependencies": {},
   "dependencies": {
-    "@strapi/strapi": "4.3.8",
-    "@strapi/plugin-users-permissions": "4.3.8",
     "@strapi/plugin-i18n": "4.3.8",
-    "better-sqlite3": "7.4.6"
+    "@strapi/plugin-users-permissions": "4.3.8",
+    "@strapi/provider-upload-aws-s3": "^4.3.8",
+    "@strapi/strapi": "4.3.8",
+    "better-sqlite3": "7.4.6",
+    "knex": "^2.3.0",
+    "pg": "^8.8.0"
   },
   "author": {
     "name": "A Strapi developer"
