UPDATE task defintion

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -124,7 +124,7 @@ jobs:
         id: task-def
         uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
-          task-definition: first-run-task-definition.json
+          task-definition: first-run-task-definition:1
           container-name: ${{ env.CONTAINER_NAME }}
           image: ${{ steps.build-image.outputs.image }}
 
