--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -105,6 +105,11 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
+      - name: Print Secrets
+        id: print-secretes
+        run: |
+          echo ${{ secrets.GIT_ENV_VARIABLES }} >> .env
+
       - name: Build, tag, and push image to Amazon ECR
         id: build-image
         env:
@@ -116,6 +121,7 @@ jobs:
           # be deployed to ECS.
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
           echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
 
       - name: Download task definition
