UPDATE development workflow

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -108,7 +108,7 @@ jobs:
       - name: Print Secrets
         id: print-secretes
         run: |
-          echo ${{ secrets.GIT_ENV_VARIABLES }} >> .env
+          echo "${{ secrets.GIT_ENV_VARIABLES }}" >> .env
 
       - name: Build, tag, and push image to Amazon ECR
         id: build-image
