--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -41,106 +41,47 @@ env:
   CONTAINER_NAME: ${{ secrets.GIT_CONTAINER_NAME }}
 
 jobs:
-  # build:
-  #   name: Build Website
-  #   runs-on: ubuntu-latest
-
-  #   steps:
-  #     - name: Environmental variables
-  #       env:
-  #         MY_VAR: Hi there! My name is
-  #         FIRST_NAME: Mona
-  #         MIDDLE_NAME: The
-  #         LAST_NAME: Octocat
-  #       run: |
-  #         echo $MY_VAR $FIRST_NAME $MIDDLE_NAME $LAST_NAME.
-
-  #     - name: Check out repository
-  #       uses: actions/checkout@v3
-
-  #     - name: Setup Node
-  #       uses: actions/setup-node@v3
-  #       with:
-  #         node-version: "14"
-  #         cache: "npm"
-  #         cache-dependency-path: "package-lock.json"
-
-  #     #  https://github.com/actions/cache/blob/main/examples.md#node---npm
-  #     - name: Get npm cache directory
-  #       id: npm-cache-dir
-  #       run: |
-  #         echo "::set-output name=dir::$(npm config get cache)"
-  #     - uses: actions/cache@v3
-  #       id: npm-cache # use this to check for `cache-hit` ==> if: steps.npm-cache.outputs.cache-hit != 'true'
-  #       with:
-  #         path: ${{ steps.npm-cache-dir.outputs.dir }}
-  #         key: ${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
-  #         restore-keys: |
-  #           ${{ runner.os }}-node-
-
-  #     - name: Install Dependencies
-  #       run: npm i
-
-  #     - name: Build Project
-  #       run: npm run build
-        
-      # https://aws.amazon.com/blogs/containers/create-a-ci-cd-pipeline-for-amazon-ecs-with-github-actions-and-aws-codebuild-tests/
-  
-  deploy:
-    name: Deploy To AWS
+  build:
+    name: Build Website
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
+      - name: Environmental variables
+        env:
+          MY_VAR: Hi there! My name is
+          FIRST_NAME: Mona
+          MIDDLE_NAME: The
+          LAST_NAME: Octocat
+        run: |
+          echo $MY_VAR $FIRST_NAME $MIDDLE_NAME $LAST_NAME.
+
+      - name: Check out repository
         uses: actions/checkout@v3
 
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
+      - name: Setup Node
+        uses: actions/setup-node@v3
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
+          node-version: "14"
+          cache: "npm"
+          cache-dependency-path: "package-lock.json"
 
-      - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v1
-
-      - name: Print Secrets
-        id: print-secretes
+      #  https://github.com/actions/cache/blob/main/examples.md#node---npm
+      - name: Get npm cache directory
+        id: npm-cache-dir
         run: |
-          echo "${{ secrets.GIT_ENV_VARIABLES }}" >> .env
-
-      - name: Build, tag, and push image to Amazon ECR
-        id: build-image
-        env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          IMAGE_TAG: ${{ github.sha }}
-        run: |
-          # Build a docker container and
-          # push it to ECR so that it can
-          # be deployed to ECS.
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-          echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
-          echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
-
-      - name: Download task definition
-        id: recreate-task-definition
-        run: |
-          aws ecs describe-task-definition --task-definition first-run-task-definition --query taskDefinition > task-definition.json
-
-      - name: Fill in the new image ID in the Amazon ECS task definition
-        id: task-def
-        uses: aws-actions/amazon-ecs-render-task-definition@v1
+          echo "::set-output name=dir::$(npm config get cache)"
+      - uses: actions/cache@v3
+        id: npm-cache # use this to check for `cache-hit` ==> if: steps.npm-cache.outputs.cache-hit != 'true'
         with:
-          task-definition: task-definition.json
-          container-name: ${{ env.CONTAINER_NAME }}
-          image: ${{ steps.build-image.outputs.image }}
+          path: ${{ steps.npm-cache-dir.outputs.dir }}
+          key: ${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
 
-      - name: Deploy Amazon ECS task definition
-        uses: aws-actions/amazon-ecs-deploy-task-definition@v1
-        with:
-          task-definition: ${{ steps.task-def.outputs.task-definition }}
-          service: ${{ env.ECS_SERVICE }}
-          cluster: ${{ env.ECS_CLUSTER }}
-          wait-for-service-stability: true
+      - name: Install Dependencies
+        run: npm i
+
+      - name: Build Project
+        run: npm run build
+        
+      # https://aws.amazon.com/blogs/containers/create-a-ci-cd-pipeline-for-amazon-ecs-with-github-actions-and-aws-codebuild-tests/
